--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "isomorphic-fetch": "^2.2.1",
     "jss": "^9.5.1",
     "material-ui": "^1.0.0-beta.30",
+    "material-ui-icons": "^1.0.0-beta.17",
     "next": "^4.2.3",
+    "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
     "react-apollo": "^1.1.3",
