--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "graphql": "^0.9.3",
     "isomorphic-fetch": "^2.2.1",
     "jss": "^9.5.1",
-    "material-ui": "^1.0.0-beta.30",
+    "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
     "next": "^4.2.3",
     "nprogress": "^0.2.0",
@@ -19,7 +19,10 @@
     "react-apollo": "^1.1.3",
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
-    "redux": "^3.6.0"
+    "react-redux": "^5.0.6",
+    "redux": "^3.6.0",
+    "reduxsauce": "^0.7.0",
+    "seamless-immutable": "^7.1.3"
   },
   "author": "Filip Papranec",
   "license": "ISC"
