--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
+    "recompose": "^0.26.0",
     "redux": "^3.6.0",
     "reduxsauce": "^0.7.0",
     "seamless-immutable": "^7.1.3"
