--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^5.0.6",
     "recompose": "^0.26.0",
     "redux": "^3.6.0",
+    "redux-form": "^7.2.3",
+    "redux-form-material-ui": "^5.0.0-beta.2",
     "reduxsauce": "^0.7.0",
     "seamless-immutable": "^7.1.3"
   },
