--- a/package.json
+++ b/package.json
@@ -7,21 +7,26 @@
     "start": "next start"
   },
   "dependencies": {
-    "graphql": "^0.9.3",
-    "isomorphic-fetch": "^2.2.1",
+    "apollo-client": "2.2.0",
+    "apollo-client-preset": "^1.0.4",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.7.0",
+    "isomorphic-unfetch": "^2.0.0",
     "jss": "^9.5.1",
     "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
     "next": "^4.2.3",
+    "next-redux-wrapper": "^1.3.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
-    "react-apollo": "^1.1.3",
+    "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "recompose": "^0.26.0",
     "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.3",
     "redux-form-material-ui": "^5.0.0-beta.2",
     "reduxsauce": "^0.7.0",
