--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "graphql-tag": "^2.7.0",
     "isomorphic-unfetch": "^2.0.0",
     "jss": "^9.5.1",
+    "lodash.debounce": "^4.0.8",
     "material-ui": "^1.0.0-beta.31",
     "material-ui-icons": "^1.0.0-beta.17",
-    "next": "^4.2.3",
+    "next": "^5.0.0",
     "next-redux-wrapper": "^1.3.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
@@ -24,6 +25,7 @@
     "react-dom": "^16.2.0",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
+    "react-select": "^1.2.1",
     "recompose": "^0.26.0",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
