--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-css": "^0.1.3",
     "apollo-client": "2.2.0",
     "apollo-client-preset": "^1.0.4",
+    "date-fns": "^1.29.0",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.7.0",
     "isomorphic-unfetch": "^2.0.0",
@@ -21,8 +23,10 @@
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-infinite-calendar": "^2.3.1",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "react-select": "^1.2.1",
@@ -35,5 +39,6 @@
     "seamless-immutable": "^7.1.3"
   },
   "author": "Filip Papranec",
-  "license": "ISC"
+  "license": "ISC",
+  "peerDependencies": {}
 }
