--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-image-lightbox": "https://github.com/filippofilip95/react-image-lightbox",
     "react-infinite-calendar": "^2.3.1",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
