--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "isomorphic-unfetch": "^2.0.0",
     "jss": "^9.5.1",
     "lodash.debounce": "^4.0.8",
+    "lodash.groupby": "^4.6.0",
     "material-ui": "^1.0.0-beta.31",
     "next": "^5.1.0",
     "next-redux-wrapper": "^1.3.5",
