--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@zeit/next-css": "^0.1.3",
     "apollo-client": "2.2.0",
     "apollo-client-preset": "^1.0.4",
-    "date-fns": "^1.29.0",
+    "date-fns": "^2.0.0-alpha.7",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.7.0",
     "isomorphic-unfetch": "^2.0.0",
@@ -18,6 +18,7 @@
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
     "material-ui": "^1.0.0-beta.31",
+    "material-ui-pickers": "^1.0.0-rc.4",
     "next": "^5.1.0",
     "next-redux-wrapper": "^1.3.5",
     "nprogress": "^0.2.0",
@@ -27,7 +28,6 @@
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-image-lightbox": "https://github.com/filippofilip95/react-image-lightbox",
-    "react-infinite-calendar": "^2.3.1",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "react-select": "^1.2.1",
