--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.2.3",
     "redux-form-material-ui": "^5.0.0-beta.2",
+    "redux-form-validators": "^2.4.3",
     "reduxsauce": "^0.7.0",
     "seamless-immutable": "^7.1.3"
   },
