--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@zeit/next-css": "^0.1.3",
     "apollo-client": "2.2.0",
     "apollo-client-preset": "^1.0.4",
     "date-fns": "^2.0.0-alpha.7",
@@ -20,11 +19,11 @@
     "material-ui": "^1.0.0-beta.31",
     "material-ui-pickers": "^1.0.0-rc.4",
     "next": "^5.1.0",
+    "next-apollo": "^1.0.13",
     "next-redux-wrapper": "^1.3.5",
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
-    "react-addons-css-transition-group": "^15.6.2",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
     "react-image-lightbox": "https://github.com/filippofilip95/react-image-lightbox",
