config env correctly with now-env

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,6 @@ $RECYCLE.BIN/
 !.vscode/extensions.json
 
 # End of https://www.gitignore.io/api/node,macos,linux,windows,webstorm,sublimetext,visualstudiocode
+
+# now env
+now-secrets.json
