--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
     "next": "^5.1.0",
     "next-apollo": "^1.0.13",
     "next-redux-wrapper": "^1.3.5",
+    "now-env": "^3.0.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
-    "react-image-lightbox": "https://github.com/filippofilip95/react-image-lightbox",
+    "react-image-lightbox": "filippofilip95/react-image-lightbox#builded",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
     "react-select": "^1.2.1",
