--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "prop-types": "^15.5.8",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
+    "react-async-script": "^0.9.1",
     "react-dom": "^16.2.0",
+    "react-google-recaptcha": "^0.11.0",
     "react-image-lightbox": "filippofilip95/react-image-lightbox#builded",
     "react-jss": "^8.2.1",
     "react-redux": "^5.0.6",
