--- a/now.json
+++ b/now.json
@@ -2,6 +2,7 @@
   "env": {
     "GRAPHQL_URL": "https://api.graph.cool/simple/v1/cjd4ihrul360t0146jgcxdgr0",
     "FILE_UPLOAD_URL": "https://api.graph.cool/file/v1/cjd4ihrul360t0146jgcxdgr0",
-    "IMAGE_URL": "https://images.graph.cool/v1/cjd4ihrul360t0146jgcxdgr0/"
+    "IMAGE_URL": "https://images.graph.cool/v1/cjd4ihrul360t0146jgcxdgr0/",
+    "RECAPTCHA_SITE_KEY": "6LfT8VQUAAAAAMIyTAi5gMAUbL9yiW1UIEcmPBjl"
   }
 }
